adding python tasks

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,7 +5,7 @@ html(lang="es")
     meta(name='description', content='this is my first html5 page')
     meta(name='keywords', content='HTML5, CSS3, JS')
     title= pageTitle
-    link(rel='stylesheet', href='../../css/styl.min.css')
+    link(rel='stylesheet', href='css/styl.min.css')
   body
     header
       h1 Jade - node template engine
