adding two server modes

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -30,4 +30,4 @@ html(lang="es")
       blockquote art1
       blockquote art2
     footer.
-      Copyright Marek @copy; 2014
+      Copyright Marek @copy; 2014 0000 
