redoing node server

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -29,6 +29,21 @@ head
             h2 Subtítulo de la primera entrada
           p Publicada el 12-01-2013
         | Texto de la primera entrada
+        span
+          | mi coche es
+        mark
+          | rojo
+        em
+          | enfasis
+        strong 
+          | fuerza
+        b
+          | negrita
+        i
+          | voz alternativo
+        details
+          summary pulsa para agrandar
+          p hola hola!
         figure
           a.polaroid
             img(src='http://minkbooks.com/content/myimage.jpg')
