updating node server

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='es')
 head
     meta(charset='utf-8')
-    meta(name='description', content='Éste es un ejemplo de HTML5')
+    meta(name='description', content='HTML5_features')
     meta(name='keywords', content='HTML5, CSS3, JavaScript')
     title Éste es el título del documento
     link(rel='stylesheet', href='css/styl.min.css')
