adding more task to nodeserver task

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,7 +4,8 @@ head
     meta(charset='utf-8')
     meta(name='description', content='HTML5_features')
     meta(name='keywords', content='HTML5, CSS3, JavaScript')
-    title Éste es el título del documento
+    title HTML5
+    link(href='http://abser-t.com/imgs/html5.png', rel='shortcut icon', type='image/x-icon')
     link(rel='stylesheet', href='css/styl.min.css')
   body
     //- El elemento header puede incluirse en otras subsecciones
